Fix header z-index to sit higher than code pre

--- a/app/ui/docs/nav_bar/style.css
+++ b/app/ui/docs/nav_bar/style.css
@@ -5,7 +5,7 @@
   background-size: cover;
   background-position: top center;
   position: fixed;
-  z-index: 100;
+  z-index: 300;
   top: 0;
   left: 0;
   right: 0;
